# apex-boilerplate

./: .dockerignore  .env  .env.docker  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api-server/: Cargo.toml
apps/api-server/src/: config.rs  main.rs  state.rs  telemetry.rs
apps/api-server/src/background/: mod.rs  scheduler.rs
apps/api-server/src/handlers/: auth.rs  health.rs  mod.rs
apps/api-server/src/middleware/: auth.rs  error.rs  mod.rs  rate_limit.rs
apps/api-server/src/observability/: alert.rs  mod.rs  request_id.rs
apps/api-server/src/websocket/: mod.rs
apps/migration/: Cargo.toml
apps/migration/src/: lib.rs  m20260103_000001_create_users_table.rs  m20260108_000001_create_posts_table.rs  main.rs
crates/apex-core/: Cargo.toml
crates/apex-core/src/: error.rs  lib.rs
crates/apex-core/src/domain/: mod.rs  post.rs  user.rs
crates/apex-core/src/ports/: auth.rs  cache.rs  job_queue.rs  mod.rs  pubsub.rs  rate_limit.rs  repository.rs
crates/apex-infra/: Cargo.toml
crates/apex-infra/src/: lib.rs
crates/apex-infra/src/auth/: jwt.rs  mod.rs  password.rs
crates/apex-infra/src/cache/: memory.rs  mod.rs  redis.rs
crates/apex-infra/src/database/: connections.rs  mod.rs  postgres_base.rs  postgres_repo.rs  tests.rs
crates/apex-infra/src/database/entity/: mod.rs  post.rs  user.rs
crates/apex-infra/src/jobs/: memory.rs  mod.rs  redis.rs
crates/apex-infra/src/pubsub/: memory.rs  mod.rs  redis.rs
crates/apex-infra/src/rate_limit/: memory.rs  mod.rs  redis.rs
crates/apex-shared/: Cargo.toml
crates/apex-shared/src/: dto.rs  lib.rs  response.rs
docker/postgres/: init.sql
llms/: Rust_Actix_Boilerplate_Research.md  implementation_plan.md  optimization_report.md.resolved  task.md.resolved
llms/walkthrough/: phase-1.md  phase-2.md  phase-3.md  phase-4.md
scripts/: docker-dev.sh
