[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = ["apex-infra/postgres"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[dependencies]
# Internal crates
apex-core.workspace = true
apex-infra.workspace = true
apex-shared.workspace = true

# Runtime
tokio.workspace = true
actix-web.workspace = true
actix-rt.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true

# Background Jobs
tokio-cron-scheduler.workspace = true

# WebSockets
socketioxide.workspace = true
tower.workspace = true

# OpenTelemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
