[package]
name = "api-server"
version.workspace = true
edition.workspace = true
description = "Apex API Server - Production-ready Rust backend"
readme = "README.md"

[[bin]]
name = "api-server"
path = "src/main.rs"

[features]
default = ["full"]

# Feature bundles
full = ["postgres", "auth", "rate-limit", "scheduler", "websocket"]
minimal = []                                                        # Bare minimum - just HTTP server

# Database
postgres = ["apex-infra/postgres"]

# Authentication & Rate Limiting
auth = ["apex-infra/auth"]
rate-limit = ["apex-infra/rate-limit"]

# Background processing
scheduler = ["tokio-cron-scheduler"]
websocket = ["socketioxide", "tower"]

# Observability
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[dependencies]
# Internal crates
apex-core.workspace = true
apex-infra.workspace = true
apex-shared.workspace = true

# Runtime
tokio.workspace = true
actix-web.workspace = true
actix-rt.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true

# Background Jobs (optional)
tokio-cron-scheduler = { workspace = true, optional = true }

# WebSockets (optional)
socketioxide = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

# OpenTelemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
