[package]
name = "migration"
version.workspace = true
edition.workspace = true

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sea-orm-migration.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
