[package]
name = "apex-infra"
version.workspace = true
edition.workspace = true
description = "Infrastructure implementations for Apex backend"
readme = "README.md"

[dependencies]
apex-core.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true

# Database (optional - enabled with postgres feature)
sea-orm = { workspace = true, optional = true }

# Authentication (optional - enabled with auth feature)
jsonwebtoken = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }

# Rate limiting (optional - enabled with rate-limit feature)
governor = { workspace = true, optional = true }

[features]
default = ["full"]

# Feature bundles
full = ["postgres", "auth", "rate-limit"]
minimal = []                              # No external dependencies

# Individual features
postgres = ["sea-orm"]
auth = ["jsonwebtoken", "argon2"]
rate-limit = ["governor"]
